--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,12 +14,9 @@ dependencies:
   flutter:
     sdk: flutter
 
-
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
 
-  provider: ^6.0.3
+  flutter_riverpod: ^1.0.3+1
 
 
 
