--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,7 @@ dependencies:
   cupertino_icons: ^1.0.2
 
   flutter_riverpod: ^1.0.3+1
+  freezed_annotation: ^2.1.0
 
 
 
@@ -27,6 +28,8 @@ dev_dependencies:
 
   flutter_lints: ^2.0.0
   meta: ^1.7.0
+  freezed: ^2.1.1
+  build_runner: ^2.2.1
 
 
 flutter:
